--- a/CKReact/ck_react/src/components/navigation/NavBar/NavBar.css
+++ b/CKReact/ck_react/src/components/navigation/NavBar/NavBar.css
@@ -1,7 +1,36 @@
+/* Common styles for navbar */
+.navbar {
+  background-color: #E5E7EB; /* Grey background */
+}
 
-@media print{
-    .no-print{
-      display: none !important;
-      background: #304;
-    }
+/* Style 1: Screen size less than 768px */
+@media (max-width: 767px) {
+  .navbar {
+    display: none; /* Hide navbar by default */
+    position: fixed; /* Position the navbar */
+    top: 0; /* Stick it to the top */
+    left: 0; /* Align it to the left */
+    right: 0; /* Extend it to the right */
+    z-index: 1000; /* Ensure it's above other content */
+
   }
+
+  .show-navbar {
+    display: block; /* Display the navbar when the button is clicked */
+  }
+}
+
+/* Style 2: Screen size greater than or equal to 768px */
+@media (min-width: 768px) {
+  .navbar {
+    display: block; /* Always display the navbar */
+    position: fixed; /* Position the navbar */
+    top: 0; /* Stick it to the top */
+    left: 0; /* Align it to the left */
+    bottom: 0; /* Extend it to the bottom */
+    background-color: #E5E7EB; /* Grey background */
+            
+
+
+  }
+}
